deployments/docker-registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    nginx.org/client-max-body-size: "500m"
spec:
  rules:
  - host: registry.home.klaus-meyer.net
    http:
      paths:
      - backend:
          service:
            name: docker-registry-browser-web
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /v2
        pathType: Prefix
  tls:
  - hosts:
    - registry.home.klaus-meyer.net
